@@ -5,24 +5,36 @@
 
 import org.gradle.api.provider.Property
 import org.gradle.api.tasks.Nested
-import org.gradle.jvm.toolchain.JavaLanguageVersion
 import org.gradle.jvm.toolchain.JavaLauncher
 import org.gradle.process.CommandLineArgumentProvider
 
 /**
- * Provides `--add-opens` arguments for JDK > 8
+ * Provides the arguments that keep the test JVM quiet about the parts of the JDK the tests rely on.
+ *
+ * All of them are warnings today and errors in some later release, and the repository has tests that
+ * assert on clean output, so they are passed as soon as the runtime knows them.
  */
 abstract class JavaModuleAddOpensArgumentProvider : CommandLineArgumentProvider {
 
     @get:Nested
     abstract val javaLauncher: Property<JavaLauncher>
 
-    override fun asArguments(): Iterable<String> =
-        if (javaLauncher.get().metadata.languageVersion.asInt() > 8) {
-            listOf(
-                "--add-opens", "java.base/java.io=ALL-UNNAMED",
-                "--add-opens", "java.base/java.lang=ALL-UNNAMED",
-                "--add-opens", "java.desktop/javax.swing=ALL-UNNAMED",
-            )
-        } else emptyList()
+    override fun asArguments(): Iterable<String> {
+        val version = javaLauncher.get().metadata.languageVersion.asInt()
+        return buildList {
+            if (version > 8) {
+                addAll(
+                    listOf(
+                        "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens", "java.desktop/javax.swing=ALL-UNNAMED",
+                    )
+                )
+            }
+            if (version >= 24) {
+                // JEP 472 and JEP 498.
+                addAll(listOf("--enable-native-access=ALL-UNNAMED", "--sun-misc-unsafe-memory-access=allow"))
+            }
+        }
+    }
 }
